--- a/1.practical.work.routing.vps.md
+++ b/1.practical.work.routing.vps.md
@@ -4,77 +4,78 @@
 ***PRACTICAL WORK I***
 ##### Check if usth.edu.vn is up or not with ping(5 times only)
 ###### PING usth.edu.vn (119.17.215.232) 56(84) bytes of data.
-64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=1 ttl=51 time=8.63 ms
-64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=2 ttl=51 time=8.59 ms
-64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=3 ttl=51 time=8.82 ms
-64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=4 ttl=51 time=9.37 ms
-64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=5 ttl=51 time=9.70 ms
+###### 64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=1 ttl=51 time=8.63 ms
+###### 64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=2 ttl=51 time=8.59 ms
+###### 64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=3 ttl=51 time=8.82 ms
+###### 64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=4 ttl=51 time=9.37 ms
+###### 64 bytes from static.netnam.vn (119.17.215.232): icmp_seq=5 ttl=51 time=9.70 ms
 ###### --- usth.edu.vn ping statistics ---
-19 packets transmitted, 19 received, 0% packet loss, time 18029ms
-rtt min/avg/max/mdev = 7.791/9.058/11.313/0.872 ms
+###### 19 packets transmitted, 19 received, 0% packet loss, time 18029ms
+###### rtt min/avg/max/mdev = 7.791/9.058/11.313/0.872 ms
 ##### Use traceroute tool to find the route from your VPS to usth.edu.vn
 ###### traceroute to usth.edu.vn (119.17.215.232), 30 hops max, 60 byte packets
- 1  * * *
- 2  * * *
- 3  * * *
- 4  * * *
- 5  * * *
- 6  * * *
- 7  static.netnam.vn (119.17.219.53)  56.313 ms static.netnam.vn (119.17.219.49)  54.670 ms  48.550 ms
- 8  * * *
- 9  * * *
-10  * * *
-11  * * *
-12  * * *
-13  * * *
-14  * * *
-15  * * *
-16  * * *
-17  * * *
-18  * * *
-19  * * *
-20  * * *
-21  * * *
-22  * * *
-23  * * *
-24  * * *
-25  * * *
-26  * * *
-27  * * *
-28  * * *
-29  * * *
-30  * * *
-* There are 30 hops when check from VPS
+###### 1  * * *
+######  ###### 2  * * *
+######  3  * * *
+######  4  * * *
+######  5  * * *
+######  6  * * *
+######  7  static.netnam.vn (119.17.219.53)  56.313 ms static.netnam.vn (119.17.219.49)  54.670 ms  48.550 ms
+######  8  * * *
+######  9  * * *
+###### 10  * * *
+###### 11  * * *
+###### 12  * * *
+###### 13  * * *
+###### 14  * * *
+###### 15  * * *
+###### 16  * * *
+###### 17  * * *
+###### 18  * * *
+###### 19  * * *
+###### 20  * * *
+###### 21  * * *
+###### 22  * * *
+###### 23  * * *
+###### 24  * * *
+###### 25  * * *
+###### 26  * * *
+###### 27  * * *
+###### 28  * * *
+###### 29  * * *
+###### 30  * * *
+###### * There are 30 hops when check from VPS
 ##### Use traceroute tool to find the route from your computer to usth.edu.vn
 ###### traceroute to usth.edu.vn (119.17.215.232), 30 hops max, 60 byte packets
- 1  192.168.1.1 (192.168.1.1)  2.121 ms  5.968 ms  5.941 ms
- 2  10.140.0.2 (10.140.0.2)  8.693 ms  9.260 ms  9.846 ms
- 3  10.255.220.105 (10.255.220.105)  8.226 ms 10.255.129.33 (10.255.129.33)  11.390 ms 10.255.220.29 (10.255.220.29)  11.367 ms
- 4  localhost (27.68.192.1)  14.676 ms  16.409 ms  16.386 ms
- 5  172.16.89.1 (172.16.89.1)  17.025 ms  17.604 ms  19.458 ms
- 6  * * *
- 7  172.16.90.25 (172.16.90.25)  6.597 ms * *
- 8  10.255.10.65 (10.255.10.65)  13.136 ms 10.255.10.69 (10.255.10.69)  8.298 ms  9.135 ms
- 9  localhost (27.68.228.189)  15.887 ms localhost (27.68.228.201)  9.478 ms localhost (27.68.228.197)  18.683 ms
-10  localhost (27.68.229.54)  11.271 ms  12.805 ms  15.645 ms
-11  static.netnam.vn (119.17.219.26)  15.632 ms static.netnam.vn (119.17.219.30)  15.566 ms static.netnam.vn (119.17.219.26)  15.839 ms
-12  static.netnam.vn (119.17.219.49)  11.135 ms  17.484 ms  16.886 ms
-13  * * *
-14  * * *
-15  * * *
-16  * * *
-17  * * *
-18  * * *
-19  * * *
-20  * * *
-21  * * *
-22  * * *
-23  * * *
-24  * * *
-25  * * *
-26  * * *
-27  * * *
-28  * * *
-29  * * *
-30  * * *
-* There are 30 hops when check from my computer
+###### 1  * * *
+###### 2  * * *
+###### 3  * * *
+###### 4  * * *
+###### 5  * * *
+###### 6  * * *
+###### 7  static.netnam.vn (119.17.219.53)  55.030 ms static.netnam.vn (119.17.219.49)  50.524 ms *
+###### 8  * * *
+###### 9  * * *
+###### 10  * * *
+###### 11  * * *
+###### 12  * * *
+###### 13  * * *
+###### 14  * * *
+###### 15  * * *
+###### 16  * * *
+###### 17  * * *
+###### 18  * * *
+###### 19  * * *
+###### 20  * * *
+###### 21  * * *
+###### 22  * * *
+###### 23  * * *
+###### 24  * * *
+###### 25  * * *
+###### 26  * * *
+###### 27  * * *
+###### 28  * * *
+###### 29  * * *
+###### 30  * * *
+
+###### * There are 30 hops when check from my computer
